[package]
name = "kumojs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
swc = "0.276.0"
swc_common = { version = "0.33.26", features = ["tty-emitter"] }
swc_core = { version = "0.93.3", features = ["common", "ecma_codegen", "swc_ecma_parser"] }
swc_ecma_ast = "0.113.7"
swc_ecma_parser = "0.144.2"
swc_ecma_visit = "0.99.1"